--- a/index.html
+++ b/index.html
@@ -131,8 +131,10 @@
         <div class="col-lg-4 col-md-12 col-sm-12">
           <div class="easytouse">
             <span class="heart"> <i class="fas fa-heart fa-9x"></i> </span>
-            <h3>Guaranteed to work.</h3>
-            <p>Find the love of your dog's life or your money back.</p>
+            <h3>Mindset modivation</h3>
+            <p>Together we can succeed with the correct mindset. With the right mindset one can conquer many aspects of life of being a trader.
+              Consequently, there are indeed ups and downs but beyond the minnute fluctuations the mindset of the trader is firm. 
+            </p>
           </div>
         </div>
       </div>
