--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
       </div>
       <div class="carousel-item">
         <h2 class="testimonial-text">Connectivity with the Community</h2>
-        <p>            the movement to financial freedom is a true possiblility.
+        <p>The movement to financial freedom is a true possiblility. It is a route which is taken by those who understand
+          that multiple income streams is the possiblity to financial freedom. The community that we at Forever Traders
 
         </p>
         <!-- <img class="testimonialimg" src="images/lady-img.jpg" alt="lady-profile">
@@ -152,16 +153,13 @@
   <div class="container py-5">
     <div class="row">
       <div class="col-lg-8 mx-auto">
-        <p class="lead">The whole content is wrapped into <code>.video-background-holder</code>, this class is mainly used to set the content dimensions, location and the fallback background in case the browser doesn't support the video format.</p>
-        <p class="lead">Change your video source from <code>source</code> tag, and the overlay color from <code>.video-background-overlay</code>.</p>
-        <p class="lead">The content text wrapped into <code>.video-background-content</code> is vertically centered using flex utilities.</p>
+        <p class="lead">"Forever Traders and the information contained herein is not intended to be a source of advice or credit analysis with respect to the material presented, and the information and/or documents contained in this website do not constitute investment advice."</p>
+
       </div>
     </div>
   </div>
 </section>
 <!-- End -->
-
-
 
 </body>
 </html>
