--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="w-100 text-white">
         <h1 class="display-4">Forever Traders</h1>
         <p class="lead mb-0">Join the Movement</p>
-        <p class="lead">Lets Trade together <a href="https://bootstrapious.com/snippets" class="text-white">
+        <p class="lead">Lets Trade together <a href="https://www.instagram.com/forever_traders/" class="text-white">
                     <u>Together we succeed.</u></a>
         </p>
       </div>
@@ -142,7 +142,16 @@
     </div>
   </section>
 
-
+  <section class="py-5">
+    <div class="container py-5">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <p class="lead">"Forever Traders and the information contained herein is not intended to be a source of advice or credit analysis with respect to the material presented, and the information and/or documents contained in this website do not constitute investment advice."</p>
+  
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
@@ -153,8 +162,17 @@
   <div class="container py-5">
     <div class="row">
       <div class="col-lg-8 mx-auto">
-        <p class="lead">"Forever Traders and the information contained herein is not intended to be a source of advice or credit analysis with respect to the material presented, and the information and/or documents contained in this website do not constitute investment advice."</p>
+        <p class="lead">
+          Forever Traders consists of a diverse group of day traders in a plethora of markets. We have been active for apporximately three years and have been a consistent
+          force in the foreign Exchange Market and other markets. The mentorship is partnered with iMarkets Live. 
+        </p>
+        <p class="lead">
+          Pricing 
+          For Pricing see iMarkets Live Criteria. ImarketslIVE LINK.
 
+          Cancelation 
+          For Cancelation see iMarkets Live Criteria. iMarkets Live Link. 
+        </p>
       </div>
     </div>
   </div>
