--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <div class="col-lg-4 col-md-12 col-sm-12">
           <div class="easytouse">
             <i class="fas fa-bullseye fa-9x bullseye"></i>
-            <h3>Weekly chart analysis, skype calls , Mindset modivation, </h3>
-            <p>We have all the dogs, the greatest dogs.</p>
+            <h3>Weekly chart analysis</h3>
+            <p>Comprehensive analysis of the charts from muliple angles of information.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12">
