--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <div class="col-lg-4 col-md-12 col-sm-12">
           <div class="easytouse">
             <i class="fas fa-bullseye fa-9x bullseye"></i>
-            <h3>Weekly chart analysis</h3>
-            <p>Comprehensive analysis of the charts from muliple angles of information.</p>
+            <h3>Weekly chart analysis, skype calls , Mindset modivation, </h3>
+            <p>We have all the dogs, the greatest dogs.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12">
@@ -142,22 +142,28 @@
     </div>
   </section>
 
+  <div class="jumbotron">
+    <h1 class="display-4">Who Are We</h1>
+    <p class="lead">We are a diversed set of traders, .</p>
+    <img src="timeframes.png" class="img-fluid" alt="Responsive image">
+    <hr class="my-4">
+    <p>Forever Traders consists of a diverse group of day traders in a plethora of markets. We have been active for apporximately three years and have been a consistent
+      force in the foreign Exchange Market and other markets. The mentorship is partnered with iMarkets Live. .</p>
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more at iMarkets Live</a>
+    </p>
+  </div>
+
   <section class="py-5">
     <div class="container py-5">
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <p class="lead">"Forever Traders and the information contained herein is not intended to be a source of advice or credit analysis with respect to the material presented, and the information and/or documents contained in this website do not constitute investment advice."</p>
-  
         </div>
       </div>
     </div>
   </section>
 
-
-
-
-
-<!-- For demo purpose -->
 <section class="py-5">
   <div class="container py-5">
     <div class="row">
@@ -169,7 +175,6 @@
         <p class="lead">
           Pricing 
           For Pricing see iMarkets Live Criteria. ImarketslIVE LINK.
-
           Cancelation 
           For Cancelation see iMarkets Live Criteria. iMarkets Live Link. 
         </p>
@@ -177,7 +182,5 @@
     </div>
   </div>
 </section>
-<!-- End -->
-
 </body>
 </html>
