--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Forever Traders</title>
+  <link rel="icon" href="ForeverTradersFavicon.ico">
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&family=Montserrat:ital,wght@0,900;1,900&family=Ubuntu&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <!-- bootstrap -->
@@ -16,6 +18,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   <!-- font awsome icons -->
   <script src="https://kit.fontawesome.com/b559e0b638.js" crossorigin="anonymous"></script>
+
   <!-- stylesheet css file -->
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -25,7 +28,10 @@
 <body style="background-color:  rgb(2, 4, 10);">
 
 <nav class="navbar navbar-expand-lg navbar-dark py-3 shadow-sm"   style="background-color: rgb(2, 4, 10);">
-  <div class="container"><a href="#" class="navbar-brand"> <b>Forever Traders</b></a>
+  <div class="container"><a href="#" class="navbar-brand"> <a class="navbar-brand" href="#">
+    <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+    Forever Traders
+  </a></a>
     <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
     <div id="navbarSupportedContent" class="collapse navbar-collapse">
       <ul class="navbar-nav ml-auto">
@@ -53,11 +59,14 @@
   <div class="video-background-content container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
-        <h1 class="display-4">Forever Traders</h1>
-        <p class="lead mb-0">Join the Movement</p>
-        <p class="lead">Lets Trade together <a href="https://www.instagram.com/forever_traders/" class="text-white">
-                    <u>Together we succeed.</u></a>
+        <h2 class="display-4">Forever Traders</h2>
+        <h3 class="display-4">Join the Movement</h3>
+          <br>
+          <br>
+        <p class="lead"><a href="https://www.instagram.com/forever_traders/" class="text-white">
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i> Check us out on Instagram.</button>
         </p>
+        <p class="lead mb-0">Lets Trade together</p>
       </div>
     </div>
   </div>
@@ -73,6 +82,9 @@
         <p>Our team consists of many experienced traders on the Foreign Exchange Market. Forever Traders is not only a team but a movement.</p>
         <!-- <img class="testimonialimg" src="images/dog-img.jpg" alt="dog-profile">
         <em>Pebbles, New York</em> -->
+        <img class="testimonialimg" src="timeframes.png" alt="dog-profile">
+        <em>Pebbles, New York</em>
+
       </div>
       <div class="carousel-item">
         <h2 class="testimonial-text">Weekly chart analysis</h2>
@@ -81,6 +93,7 @@
         </p>
         <!-- <img class="testimonialimg" src="images/lady-img.jpg" alt="lady-profile">
         <em>Beverly, Illinois</em> -->
+        <img class="testimonialimg" src="timeframes.png" alt="dog-profile">
       </div>
       <div class="carousel-item">
         <h2 class="testimonial-text">Mindset modivation</h2>
@@ -89,6 +102,7 @@
         </p>
         <!-- <img class="testimonialimg" src="images/lady-img.jpg" alt="lady-profile">
         <em>Beverly, Illinois</em> -->
+        <img class="testimonialimg" src="timeframes.png" alt="dog-profile">
       </div>
       <div class="carousel-item">
         <h2 class="testimonial-text">Connectivity with the Community</h2>
@@ -98,6 +112,7 @@
         </p>
         <!-- <img class="testimonialimg" src="images/lady-img.jpg" alt="lady-profile">
         <em>Beverly, Illinois</em> -->
+        <img class="testimonialimg" src="timeframes.png" alt="dog-profile">
       </div>
     </div>
     <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
@@ -144,15 +159,37 @@
 
   <div class="jumbotron">
     <h1 class="display-4">Who Are We</h1>
-    <p class="lead">We are a diversed set of traders, .</p>
+    <p class="lead">We are a diversed set of traders. We are a team that is in partnership with iMarkets Live and is providing a mentorship in FOREX and other investment Markets.
+      Forever Traders and the allied partners are not responsible for any financial loss in the market. We are not financial advisors and any student that incurs any loss is not Forever Traders Responsibility.
+      As Mentors we have been active for apporximately three years and have been a consistent in the 
+    </p>
     <img src="timeframes.png" class="img-fluid" alt="Responsive image">
     <hr class="my-4">
     <p>Forever Traders consists of a diverse group of day traders in a plethora of markets. We have been active for apporximately three years and have been a consistent
-      force in the foreign Exchange Market and other markets. The mentorship is partnered with iMarkets Live. .</p>
+      force in the foreign Exchange Market and other markets. The mentorship is partnered with iMarkets Live.</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more at iMarkets Live</a>
+      <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i> Learn more at iMarkets Live</button>
     </p>
   </div>
+
+  <div class="jumbotron">
+    <h1 class="display-4">Contact Information</h1>
+    <p class="lead">We are a diversed set of traders.
+    </p>
+    <img src="waitingforbreakout.png" class="img-fluid" alt="Responsive image">
+    <hr class="my-4">
+    <p>Forever Traders consists of a diverse group of day traders in a plethora of markets. We have been active for apporximately three years and have been a consistent
+      force in the foreign Exchange Market and other markets. The mentorship is partnered with iMarkets Live.</p>
+    <p class="lead">
+      <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i> Learn more at iMarkets Live</button>
+    </p>
+  </div>
+
+
+
+
+
+
 
   <section class="py-5">
     <div class="container py-5">
@@ -163,6 +200,9 @@
       </div>
     </div>
   </section>
+
+
+  
 
 <section class="py-5">
   <div class="container py-5">
