--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
   <div class="video-background-content container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white titlebox">
+        <div class="titleboxinside">
         <h2 class="display-4 title typewriter">Forever Traders</h2>
         <h3 class="display-4 titlequote">Join the Movement</h3>
+      </div>
           <br>
  
         <p class="lead"><a href="https://www.instagram.com/forever_traders/" class="text-white">
@@ -218,14 +220,14 @@
 
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval = "1000" >
     <div class="carousel-inner">
-      <div class="carousel-item active" style = "background-color : red;">
-          <img src="..." class="d-block w-100" alt="First Slide">
+      <div class="carousel-item active">
+          <img src="jpy.png" class="d-block w-100 bottomc" alt="First Slide">
       </div>
-      <div class="carousel-item" style = "background-color : yellow;">
-        <img src="..." class="d-block w-100" alt="Second Slide">
+      <div class="carousel-item" >
+        <img src="crabpatternForex.png" class="d-block w-100 bottomc" alt="Second Slide">
       </div>
-      <div class="carousel-item" style = "background-color : green;">
-        <img src="..." class="d-block w-100" alt="Third Slide">
+      <div class="carousel-item" >
+        <img src="timeframes.png" class="d-block w-100 bottomc" alt="Third Slide">
       </div>
     </div>
   </div>
