--- a/ForeverTraders/index.html
+++ b/ForeverTraders/index.html
@@ -29,7 +29,6 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark py-3 shadow-sm"   style="background-color: rgb(2, 4, 10);">
   <div class="container"><a href="#" class="navbar-brand"> <a class="navbar-brand" href="#">
-    <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="">
     Forever Traders
   </a></a>
     <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button>
@@ -53,20 +52,22 @@
 <!-- Background video -->
 <div class="video-background-holder">
   <div class="video-background-overlay"></div>
-  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" >
         <source src="ForeverTradersIntro.mp4" type="video/mp4">
     </video>
   <div class="video-background-content container h-100">
     <div class="d-flex h-100 text-center align-items-center">
-      <div class="w-100 text-white">
-        <h2 class="display-4">Forever Traders</h2>
-        <h3 class="display-4">Join the Movement</h3>
+      <div class="w-100 text-white titlebox">
+        <div class="titleboxinside">
+        <h2 class="display-4 title typewriter">Forever Traders</h2>
+        <h3 class="display-4 titlequote">Join the Movement</h3>
+      </div>
           <br>
-          <br>
+ 
         <p class="lead"><a href="https://www.instagram.com/forever_traders/" class="text-white">
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i> Check us out on Instagram.</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i> Check us out on Instagram.</button></a>
         </p>
-        <p class="lead mb-0">Lets Trade together</p>
+        <p class="titleendquote">Lets Trade together</p>
       </div>
     </div>
   </div>
@@ -75,7 +76,7 @@
 
 <section id="testimonials">
 
-  <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+  <div id="testimonial-carousel" class="carousel slide" data-ride="carousel" data-interval="2000">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <h2>Knowlegable Support Team.</h2>
@@ -93,7 +94,7 @@
         </p>
         <!-- <img class="testimonialimg" src="images/lady-img.jpg" alt="lady-profile">
         <em>Beverly, Illinois</em> -->
-        <img class="testimonialimg" src="timeframes.png" alt="dog-profile">
+        <img class="testimonialimg" src="jpy.png" alt="dog-profile">
       </div>
       <div class="carousel-item">
         <h2 class="testimonial-text">Mindset modivation</h2>
@@ -102,7 +103,7 @@
         </p>
         <!-- <img class="testimonialimg" src="images/lady-img.jpg" alt="lady-profile">
         <em>Beverly, Illinois</em> -->
-        <img class="testimonialimg" src="timeframes.png" alt="dog-profile">
+        <img class="testimonialimg" src="austin-distel-DfjJMVhwH_8-unsplash.jpg" alt="dog-profile">
       </div>
       <div class="carousel-item">
         <h2 class="testimonial-text">Connectivity with the Community</h2>
@@ -158,12 +159,21 @@
   </section>
 
   <div class="jumbotron">
-    <h1 class="display-4">Who Are We</h1>
+    <h1 class="display-4 whoarewetitle">Who Are We</h1>
     <p class="lead">We are a diversed set of traders. We are a team that is in partnership with iMarkets Live and is providing a mentorship in FOREX and other investment Markets.
       Forever Traders and the allied partners are not responsible for any financial loss in the market. We are not financial advisors and any student that incurs any loss is not Forever Traders Responsibility.
       As Mentors we have been active for apporximately three years and have been a consistent in the 
     </p>
-    <img src="timeframes.png" class="img-fluid" alt="Responsive image">
+    
+
+    <div class="img-hover-zoom img-hover-zoom--xyz">
+      <img src="timeframes.png"  alt="Responsive image">
+    </div>
+  
+
+
+
+
     <hr class="my-4">
     <p>Forever Traders consists of a diverse group of day traders in a plethora of markets. We have been active for apporximately three years and have been a consistent
       force in the foreign Exchange Market and other markets. The mentorship is partnered with iMarkets Live.</p>
@@ -173,10 +183,14 @@
   </div>
 
   <div class="jumbotron">
-    <h1 class="display-4">Contact Information</h1>
+    <h1 class="display-4 contacttext">Contact Information</h1>
     <p class="lead">We are a diversed set of traders.
     </p>
-    <img src="waitingforbreakout.png" class="img-fluid" alt="Responsive image">
+
+    <div class="img-hover-zoom img-hover-zoom--zoom-n-pan-v">
+      <img src="waitingforbreakout.png" alt="Responsive image">
+    </div>
+   
     <hr class="my-4">
     <p>Forever Traders consists of a diverse group of day traders in a plethora of markets. We have been active for apporximately three years and have been a consistent
       force in the foreign Exchange Market and other markets. The mentorship is partnered with iMarkets Live.</p>
@@ -185,11 +199,67 @@
     </p>
   </div>
 
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval = "1000" >
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+          <img src="jpy.png" class="d-block w-100 bottomc" alt="First Slide">
+      </div>
+      <div class="carousel-item" >
+        <img src="crabpatternForex.png" class="d-block w-100 bottomc" alt="Second Slide">
+      </div>
+      <div class="carousel-item" >
+        <img src="timeframes.png" class="d-block w-100 bottomc" alt="Third Slide">
+      </div>
+    </div>
+  </div>
+  <br>
+
+
+  <div class="video-background-holder">
+    <div class="video-background-overlay"></div>
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+          <source src="purplelines.mp4" type="video/mp4">
+      </video>
+    <div class="video-background-content container h-100">
+      <div class="d-flex h-100 text-center align-items-center">
+        <div class="w-100 text-white">
+          <h2 class="display-4">Join Forever Traders Today!</h2>
+          <h3 class="display-4">Together we succeed.</h3>
+            <br>
+            <br>
+          <p class="lead"><a href="https://www.instagram.com/forever_traders/" class="text-white">
+            <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i> Check us out on Instagram.</button>
+          </p>
+          <p class="lead mb-0">Lets Trade together</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
 
   <section class="py-5">
     <div class="container py-5">
@@ -200,27 +270,5 @@
       </div>
     </div>
   </section>
-
-
-  
-
-<section class="py-5">
-  <div class="container py-5">
-    <div class="row">
-      <div class="col-lg-8 mx-auto">
-        <p class="lead">
-          Forever Traders consists of a diverse group of day traders in a plethora of markets. We have been active for apporximately three years and have been a consistent
-          force in the foreign Exchange Market and other markets. The mentorship is partnered with iMarkets Live. 
-        </p>
-        <p class="lead">
-          Pricing 
-          For Pricing see iMarkets Live Criteria. ImarketslIVE LINK.
-          Cancelation 
-          For Cancelation see iMarkets Live Criteria. iMarkets Live Link. 
-        </p>
-      </div>
-    </div>
-  </div>
-</section>
 </body>
 </html>
