--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval = "1000" >
     <div class="carousel-inner">
       <div class="carousel-item active">
-          <img src="jpy.png" class="d-block w-100 bottomc" alt="First Slide">
+          <img src="jpy.png" class="d-block w-100 bottomc">
       </div>
       <div class="carousel-item" >
-        <img src="crabpatternForex.png" class="d-block w-100 bottomc" alt="Second Slide">
+        <img src="crabpatternForex.png" class="d-block w-100 bottomc" >
       </div>
       <div class="carousel-item" >
-        <img src="timeframes.png" class="d-block w-100 bottomc" alt="Third Slide">
+        <img src="timeframes.png" class="d-block w-100 bottomc" >
       </div>
     </div>
   </div>
