--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <!-- <img class="testimonialimg" src="images/dog-img.jpg" alt="dog-profile">
         <em>Pebbles, New York</em> -->
         <img class="testimonialimg" src="timeframes.png" alt="dog-profile">
-        <em>Pebbles, New York</em>
+      
 
       </div>
       <div class="carousel-item">
@@ -142,7 +142,10 @@
           <div class="easytouse">
             <i class="fas fa-bullseye fa-9x bullseye"></i>
             <h3>Weekly chart analysis, skype calls , Mindset modivation, </h3>
-            <p>We have all the dogs, the greatest dogs.</p>
+            <p>We provide chart analysis from expert analysis by utilizing muliple approaches such as crab patterns, kings crown and many other formations,
+              We connect frequently with our community via skype calls to help assist, educate and to connect with you. Additionally,
+              by joining our team we will help the beginning trader to keep their patience and not be fluctuated by the changes in the market. 
+            </p>
           </div>
         </div>
         <div class="col-lg-4 col-md-12 col-sm-12">
@@ -202,7 +205,7 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-interval = "1000" >
     <div class="carousel-inner">
       <div class="carousel-item active">
-          <img src="jpy.png" class="d-block w-100 bottomc">
+          <img src="jpy.png" class="d-block w-100 bottomc">Trading Motivation Freedom Optimism
       </div>
       <div class="carousel-item" >
         <img src="crabpatternForex.png" class="d-block w-100 bottomc" >
