--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
     <hr class="my-4">
     <p>Forever Traders consists of a diverse group of day traders in a plethora of markets. We have been active for apporximately three years and have been a consistent
       force in the foreign Exchange Market and other markets. The mentorship is partnered with iMarkets Live.</p>
-    <p class="lead">
-      <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i> Learn more at iMarkets Live</button>
-    </p>
+      <p class="lead"><a href="https://im.academy/mohamedhussain" class="text-white">
+        <button type="button" class="btn btn-outline-light btn-lg download-button"> Check our iMarkets Live Profile.</button></a>
+      </p>
   </div>
 
   <div class="jumbotron">
@@ -230,9 +230,9 @@
           <h3 class="display-4">Together we succeed.</h3>
             <br>
             <br>
-          <p class="lead"><a href="https://www.instagram.com/forever_traders/" class="text-white">
-            <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i> Check us out on Instagram.</button>
-          </p>
+            <p class="lead"><a href="https://im.academy/mohamedhussain" class="text-white">
+              <button type="button" class="btn btn-outline-light btn-lg download-button"> Check our iMarkets Live Profile.</button></a>
+            </p>
           <p class="lead mb-0">Lets Trade together</p>
         </div>
       </div>
