--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     
 
     <div class="img-hover-zoom img-hover-zoom--xyz">
-      <img src="timeframes.png"  alt="Responsive image">
+      <img class = "pic2" src="timeframes.png"  alt="Responsive image">
     </div>
   
 
@@ -190,8 +190,8 @@
     <p class="lead">We are a diversed set of traders.
     </p>
 
-    <div class="img-hover-zoom img-hover-zoom--zoom-n-pan-v">
-      <img src="waitingforbreakout.png" alt="Responsive image">
+    <div class="img-hover-zoom img-hover-zoom--xyz">
+      <img class = "pic2" src="waitingforbreakout.png" alt="Responsive image">
     </div>
    
     <hr class="my-4">
